applications/searxng/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: searxng
  namespace: searxng

spec:
  selector:
    app: searxng

  ports:
    - protocol: TCP
      port: 80
      targetPort: http
