applications/searxng/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: searxng
  namespace: searxng
  annotations:
    cert-manager.io/cluster-issuer: infisical-acme

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - search.nullmonkeys.com
      secretName: searxng-tls

  rules:
    - host: search.nullmonkeys.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 80
